Fix text align center, add minor css stylings

--- a/contactme.css
+++ b/contactme.css
@@ -9,4 +9,6 @@
 
 .contact-me, .if-you{
     align-self: center;
+    text-align: center;
+
 }
